--- a/css/styles.css
+++ b/css/styles.css
@@ -508,6 +508,14 @@ body {
   z-index: 999;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.backdrop {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 .modal {
   position: absolute;
@@ -515,7 +523,6 @@ body {
   left: 50%;
   z-index: 999;
   transform: translate(-50%, -50%) scale(1);
-  margin: 0 auto;
   background-color: #fcfcfc;
   width: 408px;
   min-height: 584px;
@@ -537,6 +544,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
   padding: 0;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -554,7 +562,6 @@ body {
 }
 .form-title {
   color: #2e2f42;
-  font-family: inherit;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -590,7 +597,8 @@ body {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus {
-  border-color: #4d5ae5;
+  border: 1px solid #4d5ae5;
+  outline: transparent;
 }
 .input-svg-icon {
   position: absolute;
