--- a/css/styles.css
+++ b/css/styles.css
@@ -498,6 +498,80 @@ body {
   letter-spacing: 0.02em;
   max-width: 265px;
 }
+/* =====FOOTER HW 5 ========= */
+.footer-container-form {
+  margin-left: 83px;
+}
+
+.footer-form {
+  display: flex;
+  border: none;
+  gap: 24px;
+}
+
+.footer-form-text {
+  margin-bottom: 16px;
+  color: var(--WHITE, #fff);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+
+.form-input {
+  color: var(--WHITE, #fff);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.48px;
+  width: 264px;
+  height: 40px;
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid var(--WHITE, #fff);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  outline: transparent;
+  padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.form-input::placeholder {
+  color: currentColor;
+}
+
+.button-footer-form {
+  display: inline-flex;
+  color: var(--WHITE, #fff);
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  min-width: 165px;
+  border-radius: 4px;
+  border: none;
+  background: var(--IRIS, #4d5ae5);
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-subscribe {
+  fill: #fff;
+  margin-left: 16px;
+}
+
+.button-footer-form:hover,
+.button-footer-form:focus {
+  background-color: #404bbf;
+  color: #ffffff;
+}
+/* =========BACKDROP=========== */
 .backdrop {
   position: fixed;
   top: 0;
@@ -610,7 +684,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus + svg {
+.form-input:focus + .input-svg-icon {
   fill: #4d5ae5;
 }
 .textarea-box {
@@ -634,31 +708,50 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.textarea-input:focus {
+  border-color: rgba(77, 90, 229, 1);
+}
+.textarea-input::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+}
+
 .callback-checkbox {
-  display: flex;
-  align-items: center;
-  gap: 8px;
   margin-bottom: 24px;
 }
 .checkbox-policy {
-  color: #8e8f99;
+  display: block;
+  color: var(--LIGHT-SLATE, #8e8f99);
   font-size: 12px;
+  font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
 }
 .checkbox-icon {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  cursor: pointer;
   fill: transparent;
+  margin-right: 8px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-right: 8px;
+}
+.checkbox-input:checked + .checkbox-policy > .checkbox-icon {
+  background-color: #404bbf;
+  border: 1px solid var(--OCEAN, #404bbf);
+  fill: rgba(244, 244, 253, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: none;
+}
+.checkbox-input:focus + .checkbox-policy > .checkbox-icon {
+  outline: 2px solid rgba(0, 0, 255, 0.5);
 }
 .visually-hidden {
   position: absolute;
@@ -672,6 +765,9 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.checkbox-input:focus + .checkbox-policy > .checkbox-svg {
+  outline: 2px solid rgba(0, 0, 255, 0.5);
+}
 .policy-link {
   color: #4d5ae5;
   font-size: 12px;
@@ -680,20 +776,26 @@ body {
   text-decoration-line: underline;
 }
 .form-button {
-  padding: 16px 32px;
+  display: block;
   min-width: 169px;
-  height: 56px;
+  margin: 0 auto;
+  color: var(--WHITE, #fff);
   text-align: center;
-  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  background-color: #4d5ae5;
-  border-radius: 4px;
+  padding: 16px 32px;
+  align-items: flex-start;
+  gap: 10px;
   border: none;
-  color: #ffffff;
-  margin: 0 auto;
-  display: block;
+  border-radius: 4px;
+  background: var(--IRIS, #4d5ae5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-button:hover,
+.form-button:focus {
+  background: var(--OCEAN, #404bbf);
 }
