--- a/css/styles.css
+++ b/css/styles.css
@@ -519,7 +519,7 @@ body {
   letter-spacing: 0.32px;
 }
 
-.form-input {
+.form-input-footer {
   color: var(--WHITE, #fff);
   font-size: 12px;
   font-style: normal;
@@ -551,6 +551,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   min-width: 165px;
+  height: 40px;
   border-radius: 4px;
   border: none;
   background: var(--IRIS, #4d5ae5);
